[risk=low][RW-11695] Update generated Hail code for latest version (#8300)